=========================================================================
CHANGE LOG
=========================================================================

2014-09-04 Thomas Holder, Blaine Bell

	* 1.7.3.0 (unstable/experimental)

	* sync various pieces of code with Incentive PyMOL

	* faster iterate/alter implementation ported from Incentive PyMOL

	* experimental mmCIF write support (atoms only)

	* partial multi-letter chain support

	* super: use guide instead of CA, enables nuc acid alignment

	* fix movie panel not shown until resize

	* eliminate some deprecated parsing modes

	* python: convert some files to absolute_import

	* --help and --version

	* dynamic_measures refactoring, fixes duplicated IDs bug

	* get_type returns object:alignment and object:ramp

	* new "command" Wizard ported from Incentive PyMOL

2014-08-15 Thomas Holder, Blaine Bell

	* reimplement volume carving
	  - use a carve mask texture

	* fix boxed volume around selection (with or without carving)
	  - this only worked for symmetry expanded volumes
	  - still limited to maps with symmetry information (TODO)

	* removed ObjectVolumeGetIsUpdated, deprecate get_volume_is_updated

	* refactored ObjectVolumeStateGetField, ObjectVolumeGetField
	  - don't keep a redundant vs->volume copy in memory

	* revert a 1.7.2 opaque_background change
	  - real-time rendering background was always black with
	    opaque_background=0
	  - removes opaque_background support for "draw"

	* 1.7.2.1

2014-08-04 Thomas Holder, Blaine Bell, Gabriel Marques

	* 1.7.2.0

	* chempy.cif: fix symmetry loading

2014-07-31 Thomas Holder, Blaine Bell, Gabriel Marques

	* Improve ObjectVolume rendering latency

	* Improve label edge pixel rounding

	* alter_state auto completion

	* improve "Label" wizard

	* re-implemented ObjectMoleculeSetDiscrete

	* 1.7.1.9 (release candidate)

2014-07-09 Thomas Holder, Blaine Bell

	* fix label_digits crash

	* fixed get_angle3f to use doubles internally
